finished home and about for mobile

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,3 +6,12 @@ $grey-text: #7e7f80;
 $light-grey: #f4f4f4;
 $dark-grey: #aaaaab;
 $orange: #c38d73;
+
+//Paddings
+.mp-24 {
+    padding: 2rem 0 0 4rem;
+}
+
+.mp-34 {
+    padding: 3rem 0 0 4rem;
+}
