--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700&display=swap");
+.mp-24 {
+  padding: 2rem 0 0 4rem; }
+
+.mp-34 {
+  padding: 3rem 0 0 4rem; }
+
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +15,9 @@ body {
   height: 100%;
   width: 100%; }
 
+body {
+  background-color: #fff; }
+
 .wrapper {
   display: flex;
   width: 90%;
@@ -17,13 +26,774 @@ body {
 img {
   vertical-align: bottom; }
 
+ul {
+  list-style: none; }
+
 html {
   font-size: 62.5%; }
 
 body {
   font-family: 'Manrope', sans-serif;
+  font-size: 1.6rem;
   font-weight: 300; }
 
 a {
   display: inline-block;
   text-decoration: none; }
+
+.subtitle {
+  font-size: 1.3rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+  .subtitle--white {
+    color: #fff; }
+  .subtitle--dark {
+    color: #191a1d; }
+
+.primary-title {
+  font-size: 3.6rem;
+  line-height: 1.3; }
+  .primary-title--white {
+    color: #fff; }
+  .primary-title--dark {
+    color: #191a1d; }
+
+.secondary-title {
+  font-size: 2.6rem;
+  text-transform: uppercase; }
+  .secondary-title--white {
+    color: #fff; }
+  .secondary-title--dark {
+    color: #191a1d; }
+
+.title-quinary {
+  font-size: 1.2rem;
+  text-transform: capitalize; }
+  .title-quinary span {
+    text-transform: uppercase; }
+  .title-quinary--white {
+    color: #fff; }
+  .title-quinary--dark {
+    color: #191a1d; }
+
+.small-heading {
+  font-size: .8rem;
+  text-transform: uppercase; }
+  .small-heading--white {
+    color: #fff; }
+  .small-heading--dark {
+    color: #191a1d; }
+
+.text {
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 1.3; }
+  .text--white {
+    color: #aaaaab; }
+
+.header .logo a {
+  color: #fff;
+  font-size: 3.6rem;
+  text-transform: uppercase;
+  font-weight: 700; }
+
+.link {
+  color: #c38d73;
+  font-weight: 400; }
+
+.featured-work .grid__item {
+  text-align: center; }
+  .featured-work .grid__item .small-heading {
+    margin-top: 2rem; }
+  .featured-work .grid__item .title-quinary {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+
+.cta {
+  color: #191a1d;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: .1rem; }
+
+.home-services .text {
+  margin-top: 2rem; }
+
+.services-links {
+  color: #fff; }
+
+.btn {
+  color: #c38d73;
+  font-size: 1.2rem;
+  font-weight: 500;
+  text-transform: uppercase; }
+
+.large-heading {
+  font-size: 8rem;
+  text-transform: capitalize;
+  color: rgba(0, 0, 0, 0.1);
+  font-weight: 700;
+  line-height: 1; }
+
+.start-a-project a span {
+  display: inline-block;
+  color: #191a1d;
+  font-size: 2.6rem;
+  font-weight: 500; }
+
+.phone {
+  color: #c38d73;
+  font-size: 2.6rem;
+  font-weight: 500;
+  margin-bottom: 2rem; }
+
+.address {
+  color: #191a1d;
+  font-size: 2.6rem;
+  font-weight: 500;
+  margin-bottom: 2rem; }
+
+.link--active {
+  color: #c38d73 !important; }
+
+.cta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem 0rem;
+  width: 13rem;
+  margin: 0 auto;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  transition: all .5s ease; }
+  .cta::before {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0%;
+    z-index: -2;
+    height: 100%;
+    width: 100%;
+    background-color: #aaaaab;
+    transition: all .5s ease; }
+  .cta::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0%;
+    z-index: -2;
+    height: 100%;
+    width: 100%;
+    background-color: #c38d73;
+    transition: all .5s ease;
+    transition-delay: 0.25s; }
+  .cta:hover {
+    color: #fff; }
+    .cta:hover::before {
+      top: 0%; }
+    .cta:hover::after {
+      top: 0%; }
+
+.footer {
+  background-color: #fff;
+  padding: 4rem 0; }
+  .footer .wrapper {
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column; }
+  .footer__item {
+    width: 100%;
+    text-align: center; }
+    .footer__item--1 {
+      padding-bottom: 4rem; }
+      .footer__item--1 .email {
+        margin-top: 3rem;
+        color: #c38d73;
+        font-size: 2.6rem;
+        font-weight: 700; }
+    .footer__item--2 {
+      padding: 3rem 0rem;
+      border-top: 0.2rem solid #f4f4f4;
+      border-bottom: 0.2rem solid #f4f4f4; }
+      .footer__item--2 ul {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center; }
+        .footer__item--2 ul a {
+          color: #c38d73;
+          text-transform: uppercase;
+          font-size: 2.6rem;
+          font-weight: 700;
+          transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+          .footer__item--2 ul a:hover {
+            color: #191a1d; }
+    .footer__item--3 {
+      padding-top: 4rem; }
+
+.grid {
+  display: grid;
+  width: 100%; }
+
+.featured-work .grid {
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 1rem;
+  margin: 4rem 0 3rem 0; }
+  .featured-work .grid__item {
+    height: 32rem;
+    width: 100%;
+    background-color: rgba(25, 26, 29, 0.85);
+    position: relative; }
+
+.our-crew .grid {
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1rem;
+  margin-bottom: 6rem; }
+  .our-crew .grid__item {
+    height: 35rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-top: 4rem;
+    text-align: center;
+    text-transform: capitalize;
+    position: relative; }
+    .our-crew .grid__item::after {
+      content: attr(data-content);
+      position: absolute;
+      top: 0rem;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 8.5rem;
+      font-weight: 700;
+      z-index: 1;
+      color: rgba(0, 0, 0, 0.1); }
+    .our-crew .grid__item--dark {
+      background-color: #191a1d; }
+      .our-crew .grid__item--dark .name,
+      .our-crew .grid__item--dark .role {
+        color: #fff; }
+    .our-crew .grid__item--light {
+      background-color: #f4f4f4; }
+      .our-crew .grid__item--light::after {
+        color: #fff; }
+      .our-crew .grid__item--light .name,
+      .our-crew .grid__item--light .role {
+        color: #191a1d; }
+    .our-crew .grid__item--top {
+      position: relative;
+      z-index: 2; }
+      .our-crew .grid__item--top .name {
+        font-size: 2rem;
+        font-weight: 500; }
+      .our-crew .grid__item--top .role {
+        font-size: 1.2rem;
+        font-weight: 500; }
+
+.stuff-to-note .grid {
+  grid-template-columns: 1fr;
+  row-gap: 5rem; }
+  .stuff-to-note .grid__item {
+    padding: 2rem 0 0 6rem;
+    position: relative; }
+    .stuff-to-note .grid__item::before {
+      content: attr(data-content);
+      position: absolute;
+      top: 0%;
+      left: 0%;
+      color: rgba(0, 0, 0, 0.1);
+      font-size: 10rem;
+      line-height: 0.7;
+      font-weight: 700; }
+    .stuff-to-note .grid__item::after {
+      content: '';
+      position: absolute;
+      top: 3.5rem;
+      left: 0%;
+      height: .2rem;
+      width: 3rem;
+      background-color: #c38d73; }
+    .stuff-to-note .grid__item h3 {
+      color: #fff; }
+    .stuff-to-note .grid__item p {
+      padding: 2rem 0 0 0;
+      line-height: 1.6; }
+
+.brands .grid {
+  margin-top: 6rem;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem; }
+  .brands .grid__item {
+    padding: 2rem 0 2rem 2rem;
+    height: 100%;
+    width: 100%; }
+    .brands .grid__item a {
+      transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+      .brands .grid__item a:hover {
+        opacity: 0.5; }
+    .brands .grid__item a img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover; }
+
+.header {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  z-index: 100;
+  width: 100%;
+  padding: 2.5rem 0rem; }
+  .header .wrapper {
+    justify-content: space-between;
+    align-items: center; }
+  .header .logo a {
+    transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+  .header .menu {
+    height: 2.5rem;
+    width: 5rem;
+    cursor: pointer;
+    transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+    .header .menu__line {
+      height: .5rem;
+      width: 100%;
+      background-color: #fff;
+      transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+      .header .menu__line:not(:last-child) {
+        margin-bottom: 1.5rem; }
+
+.nav {
+  position: fixed !important;
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  bottom: 0%;
+  left: 0%;
+  height: 100%;
+  width: 100%;
+  z-index: 6;
+  background-color: #fff;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+  .nav--open {
+    opacity: 1;
+    visibility: visible;
+    transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+  .nav .wrapper {
+    flex-direction: column; }
+  .nav ul {
+    height: 100%; }
+  .nav__top {
+    padding-top: 12rem;
+    margin-bottom: 4rem; }
+    .nav__top li:not(:last-child) {
+      margin-bottom: 2rem; }
+    .nav__top a {
+      color: #191a1d;
+      font-size: 3.6rem;
+      font-weight: 500; }
+  .nav__bottom {
+    padding-bottom: 12rem; }
+    .nav__bottom__item:not(:last-child) {
+      margin-bottom: 4rem; }
+    .nav__bottom__item h6 {
+      color: #aaaaab;
+      font-size: 1.2rem;
+      text-transform: uppercase;
+      margin-bottom: 2rem; }
+    .nav__bottom__item li:not(:last-child) {
+      margin-bottom: 1.5rem; }
+    .nav__bottom__item a {
+      color: #191a1d;
+      font-size: 1.6rem;
+      font-weight: 500;
+      text-transform: capitalize; }
+
+.hero {
+  height: 100%;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: flex-end; }
+  .hero::after {
+    content: "";
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+    background-color: rgba(25, 26, 29, 0.85); }
+  .hero video {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    z-index: 1; }
+  .hero .wrapper {
+    position: relative;
+    z-index: 3;
+    justify-content: flex-end;
+    align-items: flex-start;
+    flex-direction: column;
+    padding-bottom: 25%; }
+    .hero .wrapper::after {
+      content: '';
+      position: absolute;
+      left: 0%;
+      bottom: 0%;
+      height: 80%;
+      width: .3rem;
+      background-color: #c38d73; }
+
+.what-we-do {
+  padding: 8rem 0 6rem 0;
+  position: relative; }
+  .what-we-do::before {
+    content: '';
+    position: absolute;
+    top: 0%;
+    left: 5%;
+    height: 4rem;
+    width: .3rem;
+    background-color: #c38d73; }
+  .what-we-do .wrapper {
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column; }
+
+.featured-work {
+  padding-bottom: 6rem; }
+  .featured-work .wrapper {
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column; }
+
+.home-services {
+  background-color: #191a1d;
+  padding-top: 8rem;
+  position: relative; }
+  .home-services::before {
+    content: '';
+    position: absolute;
+    top: 0%;
+    left: 5%;
+    height: 4rem;
+    width: .3rem;
+    background-color: #c38d73; }
+  .home-services .wrapper {
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column; }
+  .home-services .services-list {
+    margin: 3rem 0 2rem 0; }
+    .home-services .services-list li {
+      padding: 1.5rem 0;
+      border-top: 0.2rem solid #7e7f80;
+      transition: all .5s ease; }
+      .home-services .services-list li:hover {
+        padding: 1.5rem 2rem; }
+      .home-services .services-list li:last-child {
+        border-bottom: 0.2rem solid #7e7f80; }
+      .home-services .services-list li a {
+        display: flex;
+        justify-content: space-between;
+        align-items: center; }
+        .home-services .services-list li a .img-container {
+          position: relative;
+          display: flex;
+          justify-content: center;
+          align-items: center; }
+          .home-services .services-list li a .img-container::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: -10rem;
+            transform: translateY(-50%);
+            width: 10rem;
+            height: .2rem;
+            background-color: #c38d73; }
+        .home-services .services-list li a img {
+          height: 1.6rem; }
+
+.our-heroes {
+  padding-top: 8rem;
+  background-color: #191a1d; }
+  .our-heroes img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    margin-top: -3rem; }
+
+.our-folk {
+  background-color: #c38d73;
+  padding: 4rem 0; }
+  .our-folk .wrapper {
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column; }
+
+.met-us {
+  padding: 8rem 0 4rem 0;
+  position: relative;
+  background-color: #f4f4f4; }
+  .met-us::after {
+    content: '';
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 4rem;
+    width: .2rem;
+    background-color: #c38d73; }
+
+.testimonials__top {
+  background-color: #f4f4f4; }
+
+.testimonials__item {
+  cursor: pointer;
+  padding-bottom: 1.5rem;
+  position: relative;
+  overflow: hidden;
+  opacity: 0.5;
+  transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+  .testimonials__item.active {
+    opacity: 1;
+    position: relative;
+    overflow: hidden; }
+    .testimonials__item.active::before {
+      content: '';
+      position: absolute;
+      bottom: 0%;
+      left: 50%;
+      height: .5rem;
+      width: 50%;
+      background-color: #c38d73;
+      transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+    .testimonials__item.active::after {
+      content: '';
+      position: absolute;
+      bottom: 0%;
+      right: 50%;
+      height: .5rem;
+      width: 50%;
+      background-color: #c38d73;
+      transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+  .testimonials__item::before {
+    content: '';
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    height: .5rem;
+    width: 0%;
+    background-color: #c38d73;
+    transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+  .testimonials__item::after {
+    content: '';
+    position: absolute;
+    bottom: 0%;
+    right: 50%;
+    height: .5rem;
+    width: 0%;
+    background-color: #c38d73;
+    transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+  .testimonials__item:hover {
+    opacity: 1; }
+    .testimonials__item:hover::before, .testimonials__item:hover::after {
+      width: 50%; }
+  .testimonials__item:not(:last-child) {
+    margin-right: 2.5rem; }
+  .testimonials__item img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover; }
+
+.testimonials__bottom {
+  padding: 6rem 0; }
+  .testimonials__bottom .wrapper {
+    position: relative;
+    height: 35rem; }
+  .testimonials__bottom .testimonial {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+    width: 100%; }
+    .testimonials__bottom .testimonial--active {
+      opacity: 1;
+      visibility: visible; }
+    .testimonials__bottom .testimonial blockquote {
+      position: relative;
+      height: 100%;
+      margin: 0 auto 5rem auto;
+      width: 80%; }
+      .testimonials__bottom .testimonial blockquote .open-quote,
+      .testimonials__bottom .testimonial blockquote .close-quote {
+        height: 3.6rem;
+        width: 3.6rem;
+        position: absolute;
+        z-index: 1; }
+        .testimonials__bottom .testimonial blockquote .open-quote img,
+        .testimonials__bottom .testimonial blockquote .close-quote img {
+          height: 100%;
+          width: 100%;
+          object-fit: cover; }
+      .testimonials__bottom .testimonial blockquote .open-quote {
+        top: 1rem;
+        left: 2.5rem; }
+      .testimonials__bottom .testimonial blockquote .close-quote {
+        right: 2.5rem;
+        bottom: 1rem; }
+      .testimonials__bottom .testimonial blockquote p {
+        display: inline-block;
+        position: relative;
+        z-index: 2;
+        font-size: 2.2rem;
+        line-height: 160%; }
+  .testimonials__bottom p span {
+    font-weight: 700; }
+
+.start-a-project {
+  background-color: #f4f4f4;
+  padding: 4rem 0; }
+  .start-a-project a {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22); }
+    .start-a-project a:hover {
+      padding: 0 2rem; }
+    .start-a-project a .img-container {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .start-a-project a .img-container::before {
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: -10rem;
+        transform: translateY(-50%);
+        width: 10rem;
+        height: .2rem;
+        background-color: #c38d73; }
+      .start-a-project a .img-container img {
+        height: 1.6rem; }
+
+.about {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end; }
+  .about .wrapper {
+    position: relative;
+    z-index: 3;
+    justify-content: flex-end;
+    align-items: flex-start;
+    flex-direction: column;
+    padding-bottom: 25%; }
+    .about .wrapper::after {
+      content: '';
+      position: absolute;
+      left: 0%;
+      bottom: 0%;
+      height: 80%;
+      width: .3rem;
+      background-color: #c38d73; }
+
+.crew {
+  position: relative; }
+  .crew__img {
+    height: 20rem;
+    width: 100%; }
+    .crew__img img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover; }
+  .crew__content {
+    position: relative;
+    padding: 8rem 0 6rem 0; }
+    .crew__content::before {
+      content: '';
+      position: absolute;
+      top: 0%;
+      left: 5%;
+      height: 4rem;
+      width: .3rem;
+      background-color: #c38d73; }
+    .crew__content .wrapper {
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-direction: column; }
+
+.our-crew {
+  background-color: #fff; }
+  .our-crew .wrapper {
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column; }
+
+.our-studio {
+  padding: 6rem 0; }
+  .our-studio .wrapper {
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column; }
+
+.stuff-to-note {
+  background-color: #191a1d;
+  padding: 8rem 0;
+  position: relative; }
+  .stuff-to-note h2 {
+    margin: 3rem 0 2rem 4rem;
+    text-transform: capitalize; }
+  .stuff-to-note::before {
+    content: '';
+    position: absolute;
+    top: 0%;
+    left: 5%;
+    height: 4rem;
+    width: .3rem;
+    background-color: #c38d73; }
+  .stuff-to-note .wrapper {
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column; }
+  .stuff-to-note__bottom {
+    margin-top: 2.6rem; }
+
+.brands {
+  background-color: #fff;
+  padding: 8rem 0 6rem 0;
+  position: relative; }
+  .brands::before {
+    content: '';
+    position: absolute;
+    top: 0%;
+    left: 5%;
+    height: 4rem;
+    width: .3rem;
+    background-color: #c38d73; }
+  .brands .wrapper {
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-direction: column; }
+  .brands h2 {
+    text-transform: capitalize; }
+  .brands p {
+    font-weight: 500;
+    line-height: 1.6; }
