--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,10 +6,194 @@ html {
 
 body {
     font-family: 'Manrope', sans-serif;
+    font-size: 1.6rem;
     font-weight: 300;
 }
 
 a {
     display: inline-block;
     text-decoration: none;
+}
+
+//heading
+.subtitle {
+    font-size: 1.3rem;
+    font-weight: 700;
+    text-transform: uppercase;
+
+    &--white {
+        color: $white;
+    }
+
+    &--dark {
+        color: $dark-text;
+    }
+}
+
+.primary-title {
+    font-size: 3.6rem;
+    line-height: 1.3;
+
+    &--white {
+        color: $white;
+    }
+
+    &--dark {
+        color: $dark-text;
+    }
+}
+
+.secondary-title {
+    font-size: 2.6rem;
+    text-transform: uppercase;
+
+    &--white {
+        color: $white;
+    }
+
+    &--dark {
+        color: $dark-text;
+    }
+}
+
+.title-quinary {
+    font-size: 1.2rem;
+    text-transform: capitalize;
+
+    & span {
+        text-transform: uppercase;
+    }
+
+    &--white {
+        color: $white;
+    }
+
+    &--dark {
+        color: $dark-text;
+    }
+}
+
+.small-heading {
+    font-size: .8rem;
+    text-transform: uppercase;
+
+    &--white {
+        color: $white;
+    }
+
+    &--dark {
+        color: $dark-text;
+    }
+}
+
+.text {
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.3;
+
+    &--white {
+        color: $dark-grey;
+    }
+}
+
+//header
+.header {
+    & .logo a {
+        color: $white;
+        font-size: 3.6rem;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+}
+
+.link {
+    color: $orange;
+    font-weight: 400;
+}
+
+//featured work
+.featured-work {
+    & .grid {
+        &__item {
+            text-align: center;
+
+            & .small-heading {
+                margin-top: 2rem;
+            }
+
+            & .title-quinary {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+        }
+    }
+}
+
+//cta 
+.cta {
+    color: $dark-text;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: 400;
+    letter-spacing: .1rem;
+}
+
+//home services 
+.home-services {
+    & .text {
+        margin-top: 2rem;
+    }
+}
+
+.services-links {
+    color: $white;
+}
+
+//btn
+.btn {
+    color: $orange;
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.large-heading {
+    font-size: 8rem;
+    text-transform: capitalize;
+    color: rgba(0, 0, 0, 0.1);
+    font-weight: 700;
+    line-height: 1;
+}
+
+//Start a project
+.start-a-project {
+    & a {
+        & span {
+            display: inline-block;
+            color: $dark-text;
+            font-size: 2.6rem;
+            font-weight: 500;
+        }
+    }
+}
+
+//phone
+.phone {
+    color: $orange;
+    font-size: 2.6rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+
+.address {
+    color: $dark-text;
+    font-size: 2.6rem;
+    font-weight: 500;
+    margin-bottom: 2rem;
+}
+
+.link--active {
+    color: $orange !important;
 }
