--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,3 +15,6 @@ $orange: #c38d73;
 .mp-34 {
     padding: 3rem 0 0 4rem;
 }
+
+/* Transitions */
+$fast-transition: all .3s cubic-bezier(0.895, 0.03, 0.685, 0.22);
