--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -58,6 +58,7 @@ a {
 
 .title-quinary {
     font-size: 1.2rem;
+    line-height: 1.4rem;
     text-transform: capitalize;
 
     & span {
@@ -75,6 +76,7 @@ a {
 
 .small-heading {
     font-size: .8rem;
+    line-height: .8rem;
     text-transform: uppercase;
 
     &--white {
