--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -40,7 +40,7 @@
                     text-transform: uppercase;
                     font-size: 2.6rem;
                     font-weight: 700;
-                    @include transition;
+                    transition: $fast-transition;
 
                     &:hover {
                         color: $dark-text;
