--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,159 +1,263 @@
 .grid {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
     width: 100%;
-}
 
-//featured work 
-.featured-work {
-    & .grid {
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 1rem;
-        margin: 4rem 0 3rem 0;
+    &__item {
+        width: 100%;
+        height: 35rem;
+        position: relative;
+        text-align: center;
+        text-transform: capitalize;
+        padding-top: 2rem;
 
-        &__item {
-            height: 32rem;
+        &--dark {
+            background-color: $dark-text;
+            
+            & .name {
+                color: $white;
+                font-weight: 500;
+                font-size: 1.4rem;
+                line-height: 2rem;
+            }
+
+            & .role {
+                color: $dark-grey;
+                font-weight: 400;
+                font-size: 1.2rem;
+                line-height: 1.7rem;
+            }
+        }
+
+        &--light {
+            background-color: $light-grey;
+
+            & .name {
+                color: $light-text;
+                font-weight: 500;
+                font-size: 1.4rem;
+                line-height: 2rem;
+            }
+
+            & .role {
+                color: $grey-text;
+                font-weight: 400;
+                font-size: 1.2rem;
+                line-height: 1.7rem;
+            }
+        }
+
+        & .title-quinary {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             width: 100%;
-            background-color: rgba($dark-text, .85);
+        }
+
+        &--top {
             position: relative;
+            z-index: 2;
+        }
+
+        &--bottom {
+            width: 100%;
+            position: absolute;
+            bottom: 0%;
+            left: 0%;
+            z-index: 2;
+
+            & img {
+                width: 100%;
+                height: auto;
+            }
         }
     }
 }
 
-.our-crew {
+/* Featured work grid */
+.featured-work,
+.projects__work {
+
     & .grid {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 1rem;
-        margin-bottom: 6rem;
+        margin: 6rem 0;
 
-        &__item {
-            height: 35rem;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            padding-top: 4rem;
-            text-align: center;
-            text-transform: capitalize;
-            position: relative;
-
+        & .grid__item {
             &::after {
-                content: attr(data-content);
-                position: absolute;
-                top: 0rem;
-                left: 50%;
-                transform: translateX(-50%);
-                font-size: 8.5rem;
-                font-weight: 700;
-                z-index: 1;
-                color: rgba(0, 0, 0, 0.1);
+                content: '';
+                @include full-width;
+                background-color: transparent;
+                transition: $fast-transition;
             }
-
-            &--dark {
-                background-color: $dark-text;
-
-                & .name,
-                & .role {
-                    color: $white;
-                }
-            }
-
-            &--light {
-                background-color: $light-grey;
-
+    
+            &:hover {
+    
                 &::after {
-                    color: $white;
+                    background-color: rgba($dark-text, .35)
                 }
+    
+            }
+    
+        }
 
-                & .name,
-                & .role {
-                    color: $dark-text;
-                }
+    }
+
+}
+
+/* Our crew */
+.our-crew {
+
+    & .grid {
+        margin-bottom: 3rem;
+        &__item {
+
+            padding-top: 2rem;
+
+            &::before {
+                content: attr(data-content);
+                font-size: 10rem;
+                color: rgba(0,0,0,0.1);
+                font-weight: 700;
             }
 
             &--top {
-                position: relative;
-                z-index: 2;
-
-                & .name {
-                    font-size: 2rem;
-                    font-weight: 500;
-                }
-
-                & .role {
-                    font-size: 1.2rem;
-                    font-weight: 500;
-                }
+                position: absolute;
+                top: 6rem;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 100%;
             }
+
         }
+
     }
+
 }
 
-.stuff-to-note {
+/* Stuff to note */
+.stuff-to-note,
+.approach {
+
     & .grid {
         grid-template-columns: 1fr;
-        row-gap: 5rem;
+        margin-top: 3rem;
 
         &__item {
-            padding: 2rem 0 0 6rem;
-            position: relative;
+            height: auto !important;
+            text-align: left;
+
+            &:not(:last-child) {
+                margin-bottom: 3.5rem;
+            }
+
+            &--top {
+                padding-left: 7rem;
+            }
 
             &::before {
                 content: attr(data-content);
                 position: absolute;
                 top: 0%;
                 left: 0%;
-                color: rgba(0, 0, 0, 0.1);
                 font-size: 10rem;
-                line-height: 0.7;
+                line-height: 0.65;
                 font-weight: 700;
+                color: rgba(0,0,0,0.1);
             }
 
             &::after {
                 content: '';
                 position: absolute;
-                top: 3.5rem;
+                top: 3.25rem;
                 left: 0%;
                 height: .2rem;
-                width: 3rem;
+                width: 1.5rem;
                 background-color: $orange;
             }
 
-            & h3 {
-                color: $white;
+        }
+
+    }
+
+}
+
+/* Brands */
+.brands {
+    & .grid {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2.5rem;
+        margin-top: 6rem;
+
+        &__item {
+            height: 100%;
+            width: 100%;
+            padding: 2rem 0;
+            display: flex;
+            align-items: center;
+
+            & a {
+                transition: $fast-transition;
             }
 
-            & p {
-                padding: 2rem 0 0 0;
-                line-height: 1.6;
+            & img {
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                transform: scale(0.8);
+            }
+
+            &:hover a {
+                opacity: 0.5;
             }
         }
     }
 }
 
-.brands {
+/* Projects */
+.projects {
     & .grid {
-        margin-top: 6rem;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
-
         &__item {
-            padding: 2rem 0 2rem 2rem;
-            height: 100%;
-            width: 100%;
-
-            & a {
-                @include transition;
-
-                &:hover {
-                    opacity: 0.5;
-                }
-            }
-
-            & a img {
-                height: 100%;
-                width: 100%;
-                object-fit: cover;
+            transition: all .3s ease;
+            &:hover {
+                box-shadow: inset 0 0 10rem black;
             }
         }
-
     }
+}
+
+/* Services */
+.services {
+    & .grid {
+        margin-bottom: 6rem;
+
+        &__item {
+            overflow: hidden;
+
+            &::before {
+                content: '';
+                @include full-width;
+                background-color: rgba($dark-grey, 0.1);
+                z-index: 1;
+                transition: all .3s ease;
+                transform: translateX(-100%);
+            }
+
+            &:hover {
+                &::before {
+                    transform: translateX(0%);
+                }
+            }
+        }
+    }
+}
+
+.new-legend {
+    background-image: url(../../images/New-Legend-Featured-1.jpg);
+    @include bg-image;
+}
+
+.metal-and-gas {
+    background-image: url(../../images/Meta-and-gas.jpg);
+    @include bg-image;
 }
