--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap');
 
 html {
     font-size: 62.5%;
@@ -17,9 +17,16 @@ a {
 
 //heading
 .subtitle {
-    font-size: 1.3rem;
-    font-weight: 700;
+    font-size: 1.2rem;
+    font-weight: 800;
+    line-height: 1.7rem;
     text-transform: uppercase;
+    letter-spacing: .2rem;
+
+    @media only screen and (min-width: $device-small) {
+        font-size: 1.4rem;
+        line-height: 2rem;
+    }
 
     &--white {
         color: $white;
@@ -32,7 +39,13 @@ a {
 
 .primary-title {
     font-size: 3.6rem;
+    font-weight: 600;
     line-height: 1.3;
+
+    @media only screen and (min-width: $device-small) {
+        font-size: 5.2rem;
+        line-height: 7.5rem;
+    }
 
     &--white {
         color: $white;
@@ -45,7 +58,14 @@ a {
 
 .secondary-title {
     font-size: 2.6rem;
-    text-transform: uppercase;
+    line-height: 2.6rem;
+    font-weight: 600;
+    text-transform: capitalize;
+
+    @media only screen and (min-width: $device-small) {
+        font-size: 2.4rem;
+        line-height: 2.4rem;
+    }
 
     &--white {
         color: $white;
@@ -60,6 +80,12 @@ a {
     font-size: 1.2rem;
     line-height: 1.4rem;
     text-transform: capitalize;
+    font-weight: 600;
+
+    @media only screen and (min-width: $device-small) {
+        font-size: 2.4rem;
+        line-height: 2.9rem;
+    }
 
     & span {
         text-transform: uppercase;
@@ -79,6 +105,11 @@ a {
     line-height: .8rem;
     text-transform: uppercase;
 
+    @media only screen and (min-width: $device-small) {
+        font-size: 1.2rem;
+        line-height: 1.2rem;
+    }
+
     &--white {
         color: $white;
     }
@@ -89,12 +120,17 @@ a {
 }
 
 .text {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: 400;
-    line-height: 1.3;
+    line-height: 3.2rem;
+
+    @media only screen and (min-width: $device-small) {
+        font-size: 2.2rem;
+        line-height: 4rem;
+    }
 
     &--white {
-        color: $dark-grey;
+        color: $grey-text;
     }
 }
 
@@ -137,8 +173,9 @@ a {
 .cta {
     color: $dark-text;
     font-size: 1rem;
+    line-height: 1rem;
     text-transform: uppercase;
-    font-weight: 400;
+    font-weight: 800;
     letter-spacing: .1rem;
 }
 
@@ -151,6 +188,9 @@ a {
 
 .services-links {
     color: $white;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1.6rem;
 }
 
 //btn
@@ -167,6 +207,12 @@ a {
     color: rgba(0, 0, 0, 0.1);
     font-weight: 700;
     line-height: 1;
+}
+
+.our-folk {
+    & p {
+        color: $white !important;
+    }
 }
 
 //Start a project
