--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -6,7 +6,6 @@
     align-items: flex-end;
 
     & .wrapper {
-
         position: relative;
         z-index: 3;
         justify-content: flex-end;
@@ -41,17 +40,17 @@
     }
 
     &__content {
-        position: relative;
-        padding: 8rem 0 6rem 0;
-
-        &::before {
-            @include section-line;
-        }
+        background-color: $white;
 
         & .wrapper {
             justify-content: space-between;
             align-items: flex-start;
             flex-direction: column;
+            padding: 8rem 0 6rem 0;
+
+            &::before {
+                @include section-line;
+            }
         }
     }
 }
@@ -78,7 +77,7 @@
 
 .stuff-to-note {
     background-color: $dark-text;
-    padding: 8rem 0;
+    // padding: 8rem 0;
     position: relative;
 
     & h2 {
@@ -86,14 +85,15 @@
         text-transform: capitalize;
     }
 
-    &::before {
-        @include section-line;
-    }
-
     & .wrapper {
         justify-content: space-between;
         align-items: flex-start;
         flex-direction: column;
+        padding: 8rem 0;
+
+        &::before {
+            @include section-line;
+        }
     }
 
     &__bottom {
@@ -103,17 +103,16 @@
 
 .brands {
     background-color: $white;
-    padding: 8rem 0 6rem 0;
-    position: relative;
-
-    &::before {
-        @include section-line;
-    }
-
+    
     & .wrapper {
         justify-content: space-between;
         align-items: flex-start;
         flex-direction: column;
+        padding: 8rem 0 6rem 0;
+
+        &::before {
+            @include section-line;
+        }
     }
 
     & h2 {
