--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -29,3 +29,4 @@ $device-small: 671px;
 
 /* Transitions */
 $fast-transition: all .3s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+$slow-transition: all .5s cubic-bezier(0.895, 0.03, 0.685, 0.22);
